--- a/titlebarWindows/titlebarWindows.theme.css
+++ b/titlebarWindows/titlebarWindows.theme.css
@@ -1,3 +1,8 @@
 /*//META{"name":"titlebarWindows","description":"Native Windows' titlebar look on Discord","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/titlebarWindows/dist/themefile.css");
+
+/*
+  Looking for variables to change?
+  https://github.com/intrnl/discordcustomizations/blob/master/titlebarWindows/src/_variables.scss
+*/
