titlebarWindows - added support server

--- a/titlebarWindows/titlebarWindows.theme.css
+++ b/titlebarWindows/titlebarWindows.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"titlebarWindows","description":"Native Windows' titlebar look on Discord","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"titlebarWindows","description":"Native Windows' titlebar look on Discord. Support server: http://bit.ly/IntSupportServer","author":"intrnl","version":"0.0"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/titlebarWindows/dist/themefile.css");
 
