titlebarMacOS - fix minimize button on press

--- a/titlebarMacOS/src/themefile.scss
+++ b/titlebarMacOS/src/themefile.scss
@@ -80,7 +80,7 @@
         background-image: getResource("button minimize");
       }
       &:active {
-        background-color: #2a9f3a;
+        background-color: #ca9633;
       }
     }
   }
