roleRevert - change variable initials

--- a/roleRevert/src/_variables.scss
+++ b/roleRevert/src/_variables.scss
@@ -2,7 +2,7 @@
 
 // These are the default variables used on the theme.
 // Note that the variables are prefixed,
-// e.g. bgcolor might become --i-tbw-bgcolor
+// e.g. bgcolor might become --i-rrv-bgcolor
 
 $theme-variables: (
   // Set the opacity for the role background.
