--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -2,6 +2,10 @@ $emoji-people: (
   /* :alien:                                                               */ "/assets/d14aa021cbb0a5819ec78a29291dee83.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f47d.svg",
   /* :angel:                                                               */ "/assets/4e119a2ac01300de41aee4e941c8f714.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fa/Emoji_u1f47c.svg",
   /* :angel::skin-tone-1:                                                  */ "/assets/c8a36e8195373b4f3a8ee1c7c0dabe18.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c9/Emoji_u1f47c_1f3fb.svg",
+  /* :angel::skin-tone-2:                                                  */ "/assets/d98ce55bc2af833c8cf5c349077bf5c4.svg": "https://upload.wikimedia.org/wikipedia/commons/1/17/Emoji_u1f47c_1f3fc.svg",
+  /* :angel::skin-tone-3:                                                  */ "/assets/e4b768f9b94eb7271fa6059df8c64ebb.svg": "https://upload.wikimedia.org/wikipedia/commons/2/22/Emoji_u1f47c_1f3fd.svg",
+  /* :angel::skin-tone-4:                                                  */ "/assets/4f1ddbcf91958158e9a009f7b178ac4a.svg": "https://upload.wikimedia.org/wikipedia/commons/1/12/Emoji_u1f47c_1f3fe.svg",
+  /* :angel::skin-tone-5:                                                  */ "/assets/10b07615750b5f0a5b1b6b3d699ef483.svg": "https://upload.wikimedia.org/wikipedia/commons/2/28/Emoji_u1f47c_1f3ff.svg",
   /* :angry:                                                               */ "/assets/65bd38c1796f4959df4028fdf06aaf8f.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8a/Emoji_u1f620.svg",
   /* :anguished:                                                           */ "/assets/f90a4ddd5d612bd89c0abe44c39fa4df.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dd/Emoji_u1f627.svg",
   /* :astonished:                                                          */ "/assets/948071d5928127731164ba265b4c4734.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b5/Emoji_u1f632.svg",
