--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -12,6 +12,10 @@ $emoji-people: (
   /* :athletic_shoe:                                                       */ "/assets/f9b9ba8a54133d3e4fed11e512f43f83.svg": "https://upload.wikimedia.org/wikipedia/commons/1/16/Emoji_u1f45f.svg",
   /* :baby:                                                                */ "/assets/ffe9f8f9932a39a98b6cd7b65a6166f3.svg": "https://upload.wikimedia.org/wikipedia/commons/6/63/Emoji_u1f476.svg",
   /* :baby::skin-tone-1:                                                   */ "/assets/80ad0dcb041e7d46ba13d1131a3625a1.svg": "https://upload.wikimedia.org/wikipedia/commons/0/09/Emoji_u1f476_1f3fb.svg",
+  /* :baby::skin-tone-2:                                                   */ "/assets/2f8a123049b11687204c9fa9c3d8e584.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8b/Emoji_u1f476_1f3fc.svg",
+  /* :baby::skin-tone-3:                                                   */ "/assets/3cdfa6dd828b6677e134b737435de62e.svg": "https://upload.wikimedia.org/wikipedia/commons/3/34/Emoji_u1f476_1f3fd.svg",
+  /* :baby::skin-tone-4:                                                   */ "/assets/dc3026fb9e7233398f26f716012ca31d.svg": "https://upload.wikimedia.org/wikipedia/commons/1/14/Emoji_u1f476_1f3fe.svg",
+  /* :baby::skin-tone-5:                                                   */ "/assets/b3765914fe0e962301851fa331e2cfa0.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cb/Emoji_u1f476_1f3ff.svg",
   /* :back_of_hand::skin-tone-1:                                           */ "/assets/6c04987d8bd5a37fc6d3e063a2f1a7de.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a7/Emoji_u1f91a_1f3fb.svg",
   /* :bikini:                                                              */ "/assets/b4351e95f4ee4ba1ad225b996976a42b.svg": "https://upload.wikimedia.org/wikipedia/commons/7/72/Emoji_u1f459.svg",
   /* :blush:                                                               */ "/assets/c7631d09241c31bb0e357ba4c877d726.svg": "https://upload.wikimedia.org/wikipedia/commons/4/46/Emoji_u1f60a.svg",
