--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -17,6 +17,10 @@ $emoji-people: (
   /* :baby::skin-tone-4:                                                   */ "/assets/dc3026fb9e7233398f26f716012ca31d.svg": "https://upload.wikimedia.org/wikipedia/commons/1/14/Emoji_u1f476_1f3fe.svg",
   /* :baby::skin-tone-5:                                                   */ "/assets/b3765914fe0e962301851fa331e2cfa0.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cb/Emoji_u1f476_1f3ff.svg",
   /* :back_of_hand::skin-tone-1:                                           */ "/assets/6c04987d8bd5a37fc6d3e063a2f1a7de.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a7/Emoji_u1f91a_1f3fb.svg",
+  /* :back_of_hand::skin-tone-2:                                           */ "/assets/6e34dfe869fe67b6e497869f4e07ed6d.svg": "https://upload.wikimedia.org/wikipedia/commons/0/00/Emoji_u1f91a_1f3fc.svg",
+  /* :back_of_hand::skin-tone-3:                                           */ "/assets/9b74820cb6df6d9142d73b6b894f3eb6.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1a/Emoji_u1f91a_1f3fd.svg",
+  /* :back_of_hand::skin-tone-4:                                           */ "/assets/17d3d1157f8cc7156df8e8980579e107.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f0/Emoji_u1f91a_1f3fe.svg",
+  /* :back_of_hand::skin-tone-5:                                           */ "/assets/469530cd639b6074a3c728357d2dbf47.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d1/Emoji_u1f91a_1f3ff.svg",
   /* :bikini:                                                              */ "/assets/b4351e95f4ee4ba1ad225b996976a42b.svg": "https://upload.wikimedia.org/wikipedia/commons/7/72/Emoji_u1f459.svg",
   /* :blush:                                                               */ "/assets/c7631d09241c31bb0e357ba4c877d726.svg": "https://upload.wikimedia.org/wikipedia/commons/4/46/Emoji_u1f60a.svg",
   /* :boot:                                                                */ "/assets/1ac6fb17c60570343eec4e81fe1e4073.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dc/Emoji_u1f462.svg",
