--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -26,6 +26,10 @@ $emoji-people: (
   /* :boot:                                                                */ "/assets/1ac6fb17c60570343eec4e81fe1e4073.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dc/Emoji_u1f462.svg",
   /* :bow:                                                                 */ "/assets/6ad7533814016970e37691af940737b1.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d9/Emoji_u1f647.svg",
   /* :bow::skin-tone-1:                                                    */ "/assets/9dc796e9a06d7fdec5efff3c0963e364.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d1/Emoji_u1f647_1f3fb.svg",
+  /* :bow::skin-tone-2:                                                    */ "/assets/7d5d464cd50d16dd70d397a913f33298.svg": "https://upload.wikimedia.org/wikipedia/commons/5/52/Emoji_u1f647_1f3fc.svg",
+  /* :bow::skin-tone-3:                                                    */ "/assets/dcad54c08118a4bca3d70cdfb56f2500.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f647_1f3fd.svg",
+  /* :bow::skin-tone-4:                                                    */ "/assets/76c97f084fed162ad35aa50c66897ee9.svg": "https://upload.wikimedia.org/wikipedia/commons/3/36/Emoji_u1f647_1f3fe.svg",
+  /* :bow::skin-tone-5:                                                    */ "/assets/d05cc969d79d6fa34895c36a173ea913.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Emoji_u1f647_1f3ff.svg",
   /* :boy:                                                                 */ "/assets/88e1c7830dd53d39ad610d683d72bd7a.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8c/Emoji_u1f466.svg",
   /* :boy::skin-tone-1:                                                    */ "/assets/6c4d0054cae2d5847e3424fb5d2b134a.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a1/Emoji_u1f466_1f3fb.svg",
   /* :bride_with_veil:                                                     */ "/assets/d17b793b9284750b82a660da66de341e.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bc/Emoji_u1f470.svg",
