--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -32,6 +32,10 @@ $emoji-people: (
   /* :bow::skin-tone-5:                                                    */ "/assets/d05cc969d79d6fa34895c36a173ea913.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4a/Emoji_u1f647_1f3ff.svg",
   /* :boy:                                                                 */ "/assets/88e1c7830dd53d39ad610d683d72bd7a.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8c/Emoji_u1f466.svg",
   /* :boy::skin-tone-1:                                                    */ "/assets/6c4d0054cae2d5847e3424fb5d2b134a.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a1/Emoji_u1f466_1f3fb.svg",
+  /* :boy::skin-tone-2:                                                    */ "/assets/fb4a8e6926e9e0b38e9fd99485bfc9a1.svg": "https://upload.wikimedia.org/wikipedia/commons/4/42/Emoji_u1f466_1f3fc.svg",
+  /* :boy::skin-tone-3:                                                    */ "/assets/2f022869c9118718bfb2a34bf09263e4.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f466_1f3fd.svg",
+  /* :boy::skin-tone-4:                                                    */ "/assets/6f71142a04f30cb34de73e0146906486.svg": "https://upload.wikimedia.org/wikipedia/commons/9/95/Emoji_u1f466_1f3fe.svg",
+  /* :boy::skin-tone-5:                                                    */ "/assets/edb8b37fbf45e240a6937aa532efa216.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f466_1f3ff.svg",
   /* :bride_with_veil:                                                     */ "/assets/d17b793b9284750b82a660da66de341e.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bc/Emoji_u1f470.svg",
   /* :bride_with_veil::skin-tone-1:                                        */ "/assets/95049dd5a5fc7d5ce0e255e557db870a.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1b/Emoji_u1f470_1f3fb.svg",
   /* :briefcase:                                                           */ "/assets/0d9ad62c34798452bbc96cd531f91258.svg": "https://upload.wikimedia.org/wikipedia/commons/5/54/Emoji_u1f4bc.svg",
