emojiNotoBlobs - :bride_with_veil:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -38,6 +38,10 @@ $emoji-people: (
   /* :boy::skin-tone-5:                                                    */ "/assets/edb8b37fbf45e240a6937aa532efa216.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f466_1f3ff.svg",
   /* :bride_with_veil:                                                     */ "/assets/d17b793b9284750b82a660da66de341e.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bc/Emoji_u1f470.svg",
   /* :bride_with_veil::skin-tone-1:                                        */ "/assets/95049dd5a5fc7d5ce0e255e557db870a.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1b/Emoji_u1f470_1f3fb.svg",
+  /* :bride_with_veil::skin-tone-2:                                        */ "/assets/459b9e4d1b759cb81d2e3bea6c9d85bb.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a7/Emoji_u1f470_1f3fc.svg",
+  /* :bride_with_veil::skin-tone-3:                                        */ "/assets/fd8164769b3b4ff777b430479ba78f45.svg": "https://upload.wikimedia.org/wikipedia/commons/1/16/Emoji_u1f470_1f3fd.svg",
+  /* :bride_with_veil::skin-tone-4:                                        */ "/assets/28bd65540257cc4eb5c574f3e3a3fb71.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d2/Emoji_u1f470_1f3fe.svg",
+  /* :bride_with_veil::skin-tone-5:                                        */ "/assets/1d152219dab1d0aafa864447a3eb46cd.svg": "https://upload.wikimedia.org/wikipedia/commons/5/59/Emoji_u1f470_1f3ff.svg",
   /* :briefcase:                                                           */ "/assets/0d9ad62c34798452bbc96cd531f91258.svg": "https://upload.wikimedia.org/wikipedia/commons/5/54/Emoji_u1f4bc.svg",
   /* :bust_in_silhouette:                                                  */ "/assets/1223c2e358973af4766acf976e941520.svg": "https://upload.wikimedia.org/wikipedia/commons/6/61/Emoji_u1f464.svg",
   /* :busts_in_silhouette:                                                 */ "/assets/cb3eea8759d62489b21ccd3ee913c1c8.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8c/Emoji_u1f465.svg",
