--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -46,6 +46,10 @@ $emoji-people: (
   /* :bust_in_silhouette:                                                  */ "/assets/1223c2e358973af4766acf976e941520.svg": "https://upload.wikimedia.org/wikipedia/commons/6/61/Emoji_u1f464.svg",
   /* :busts_in_silhouette:                                                 */ "/assets/cb3eea8759d62489b21ccd3ee913c1c8.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8c/Emoji_u1f465.svg",
   /* :call_me_hand::skin-tone-1:                                           */ "/assets/b21ca6b1954fa3e9e3b2883e04cb699c.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Emoji_u1f919_1f3fb.svg",
+  /* :call_me_hand::skin-tone-2:                                           */ "/assets/329e01a35d31b07ed5ea7dba14f1cfa6.svg": "https://upload.wikimedia.org/wikipedia/commons/1/13/Emoji_u1f919_1f3fc.svg",
+  /* :call_me_hand::skin-tone-3:                                           */ "/assets/3ed350934261c5df0bbdf42222716bb2.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4b/Emoji_u1f919_1f3fd.svg",
+  /* :call_me_hand::skin-tone-4:                                           */ "/assets/03ab3578e0378c54e83ee4004e543797.svg": "https://upload.wikimedia.org/wikipedia/commons/4/47/Emoji_u1f919_1f3fe.svg",
+  /* :call_me_hand::skin-tone-5:                                           */ "/assets/8881b37fb383da16138e86b494154341.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f919_1f3ff.svg",
   /* :call_me:                                                             */ "/assets/c90a58a821ce15bb04f0394c1abe5f38.svg": "https://upload.wikimedia.org/wikipedia/commons/0/02/Emoji_u1f919.svg",
   /* :clap:                                                                */ "/assets/79b9eb736bd31cd7d9ed23046929fda0.svg": "https://upload.wikimedia.org/wikipedia/commons/d/da/Emoji_u1f44f.svg",
   /* :clap::skin-tone-1:                                                   */ "/assets/d20b335ebf1d0128962f9027761bae64.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5e/Emoji_u1f44f_1f3fb.svg",
