emojiNotoBlobs - :construction_worker:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -64,6 +64,10 @@ $emoji-people: (
   /* :confused:                                                            */ "/assets/b78035b8e2a6a4885d4448198963a14e.svg": "https://upload.wikimedia.org/wikipedia/commons/4/49/Emoji_u1f615.svg",
   /* :construction_worker:                                                 */ "/assets/1bccaf07bdead06ebdc1a487ee546897.svg": "https://upload.wikimedia.org/wikipedia/commons/2/21/Emoji_u1f477.svg",
   /* :construction_worker::skin-tone-1:                                    */ "/assets/3b840271e64bea7e7ae7c2d8d6af1b37.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b6/Emoji_u1f477_1f3fb.svg",
+  /* :construction_worker::skin-tone-2:                                    */ "/assets/081f87b00b3d9688498756240f8962aa.svg": "https://upload.wikimedia.org/wikipedia/commons/2/26/Emoji_u1f477_1f3fc.svg",
+  /* :construction_worker::skin-tone-3:                                    */ "/assets/1868b566b4f5a1d4e3eb484af7ec2f4d.svg": "https://upload.wikimedia.org/wikipedia/commons/2/28/Emoji_u1f477_1f3fd.svg",
+  /* :construction_worker::skin-tone-4:                                    */ "/assets/9422830c8bc7a056da4d21441d659779.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u1f477_1f3fe.svg",
+  /* :construction_worker::skin-tone-5:                                    */ "/assets/5c9b8f71d5bf61582e1cf6403c0a5db0.svg": "https://upload.wikimedia.org/wikipedia/commons/6/60/Emoji_u1f477_1f3ff.svg",
   /* :cop:                                                                 */ "/assets/27ea5cf73c2aabb6e8bf523e117ff5dc.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dd/Emoji_u1f46e.svg",
   /* :cop::skin-tone-1:                                                    */ "/assets/325fab67325191391072cae2d0afa82a.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Emoji_u1f46e_1f3fb.svg",
   /* :couple_mm:                                                           */ "/assets/e865d927daed301ac4ce03102a064560.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f468_200d_2764_fe0f_200d_1f468.svg",
