--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -70,6 +70,10 @@ $emoji-people: (
   /* :construction_worker::skin-tone-5:                                    */ "/assets/5c9b8f71d5bf61582e1cf6403c0a5db0.svg": "https://upload.wikimedia.org/wikipedia/commons/6/60/Emoji_u1f477_1f3ff.svg",
   /* :cop:                                                                 */ "/assets/27ea5cf73c2aabb6e8bf523e117ff5dc.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dd/Emoji_u1f46e.svg",
   /* :cop::skin-tone-1:                                                    */ "/assets/325fab67325191391072cae2d0afa82a.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2c/Emoji_u1f46e_1f3fb.svg",
+  /* :cop::skin-tone-2:                                                    */ "/assets/d986361cc1e831834a39632a5edc7890.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d4/Emoji_u1f46e_1f3fc.svg",
+  /* :cop::skin-tone-3:                                                    */ "/assets/013ce7c7b8232cca46cc3b40a8d8622a.svg": "https://upload.wikimedia.org/wikipedia/commons/f/ff/Emoji_u1f46e_1f3fd.svg",
+  /* :cop::skin-tone-4:                                                    */ "/assets/0d1bca5946c6910e27d957929827ff37.svg": "https://upload.wikimedia.org/wikipedia/commons/3/30/Emoji_u1f46e_1f3fe.svg",
+  /* :cop::skin-tone-5:                                                    */ "/assets/71b739606c8968070acbbc8b60b07d42.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f46e_1f3ff.svg",
   /* :couple_mm:                                                           */ "/assets/e865d927daed301ac4ce03102a064560.svg": "https://upload.wikimedia.org/wikipedia/commons/0/03/Emoji_u1f468_200d_2764_fe0f_200d_1f468.svg",
   /* :couple_with_heart:                                                   */ "/assets/c51dd8cca368c0cd8eeb017e96d2c168.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a9/Emoji_u1f491.svg",
   /* :couple_ww:                                                           */ "/assets/4f916b4d4139b90b19ffb3eeb8e376f6.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fd/Emoji_u1f469_200d_2764_fe0f_200d_1f469.svg",
