--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -85,6 +85,10 @@ $emoji-people: (
   /* :crying_cat_face:                                                     */ "/assets/dad7a30149566338fbe1ea8de6e5e6bd.svg": "https://upload.wikimedia.org/wikipedia/commons/7/76/Emoji_u1f63f.svg",
   /* :dancer:                                                              */ "/assets/0912d3eafa64a0d5f4f1db5fd3598a93.svg": "https://upload.wikimedia.org/wikipedia/commons/9/97/Emoji_u1f483.svg",
   /* :dancer::skin-tone-1:                                                 */ "/assets/5e58fc3e2b14fe1812a72bbcd859842d.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f1/Emoji_u1f483_1f3fb.svg",
+  /* :dancer::skin-tone-2:                                                 */ "/assets/35c27fe93174428bd6d37731254fc0ed.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d2/Emoji_u1f483_1f3fc.svg",
+  /* :dancer::skin-tone-3:                                                 */ "/assets/f8b01824b763e3515b28d6416d225642.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fc/Emoji_u1f483_1f3fd.svg",
+  /* :dancer::skin-tone-4:                                                 */ "/assets/af7353165f1d9cfa2aed9aa0e73aedd7.svg": "https://upload.wikimedia.org/wikipedia/commons/3/35/Emoji_u1f483_1f3fe.svg",
+  /* :dancer::skin-tone-5:                                                 */ "/assets/8b8ada31a3d2464826a9e40557c444d5.svg": "https://upload.wikimedia.org/wikipedia/commons/8/85/Emoji_u1f483_1f3ff.svg",
   /* :dancers:                                                             */ "/assets/5b42fc2496caa87aad4ac3478bcd332d.svg": "https://upload.wikimedia.org/wikipedia/commons/3/38/Emoji_u1f46f.svg",
   /* :dark_sunglasses:                                                     */ "/assets/257c0cd89a832bbec1dd24f4ce2551fb.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d0/Emoji_u1f576.svg",
   /* :disappointed_relieved:                                               */ "/assets/744e294f94042d53a35348ddc46747b5.svg": "https://upload.wikimedia.org/wikipedia/commons/8/88/Emoji_u1f625.svg",
