--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -98,6 +98,10 @@ $emoji-people: (
   /* :drooling_face:                                                       */ "/assets/e915a145787a561dfb06fce7e0d55c2c.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e5/Emoji_u1f924.svg",
   /* :ear:                                                                 */ "/assets/13c22b05b67e203010c9bdf7bef139ef.svg": "https://upload.wikimedia.org/wikipedia/commons/8/83/Emoji_u1f442.svg",
   /* :ear::skin-tone-1:                                                    */ "/assets/a6bc58ee59c6b95db9d0b0e90a3309ef.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d9/Emoji_u1f442_1f3fb.svg",
+  /* :ear::skin-tone-2:                                                    */ "/assets/7b013022c076696b92666e0cdf5e308d.svg": "https://upload.wikimedia.org/wikipedia/commons/0/07/Emoji_u1f442_1f3fc.svg",
+  /* :ear::skin-tone-3:                                                    */ "/assets/32d44be08c8084c039fdadb3631bc6b6.svg": "https://upload.wikimedia.org/wikipedia/commons/9/93/Emoji_u1f442_1f3fd.svg",
+  /* :ear::skin-tone-4:                                                    */ "/assets/f3e6a4d75a98b40026f222293af0f425.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3a/Emoji_u1f442_1f3fe.svg",
+  /* :ear::skin-tone-5:                                                    */ "/assets/1f51407ef0270c505af79ad0736f6a36.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0b/Emoji_u1f442_1f3ff.svg",
   /* :expecting_woman::skin-tone-1:                                        */ "/assets/25907f32e80752be15b776d89e7734d4.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9e/Emoji_u1f930_1f3fb.svg",
   /* :expressionless:                                                      */ "/assets/07ede26f668b74a5fbeefff6eb35e15e.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5d/Emoji_u1f611.svg",
   /* :eye:                                                                 */ "/assets/14a28558668a65318bd7812da7d443bf.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b8/Emoji_u1f441.svg",
