emojiNotoBlos - :expecting_woman:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -103,6 +103,10 @@ $emoji-people: (
   /* :ear::skin-tone-4:                                                    */ "/assets/f3e6a4d75a98b40026f222293af0f425.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3a/Emoji_u1f442_1f3fe.svg",
   /* :ear::skin-tone-5:                                                    */ "/assets/1f51407ef0270c505af79ad0736f6a36.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0b/Emoji_u1f442_1f3ff.svg",
   /* :expecting_woman::skin-tone-1:                                        */ "/assets/25907f32e80752be15b776d89e7734d4.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9e/Emoji_u1f930_1f3fb.svg",
+  /* :expecting_woman::skin-tone-2:                                        */ "/assets/08a8564c51a1ade59dc4a92e6a93f9a7.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0b/Emoji_u1f930_1f3fc.svg",
+  /* :expecting_woman::skin-tone-3:                                        */ "/assets/09cb3c8f46f0419661de1a7405a261b0.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a0/Emoji_u1f930_1f3fd.svg",
+  /* :expecting_woman::skin-tone-4:                                        */ "/assets/022d19d0126bda73ae4f71ef7968229b.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c7/Emoji_u1f930_1f3fe.svg",
+  /* :expecting_woman::skin-tone-5:                                        */ "/assets/758f63405f4c7c3ed03490cbbaf1ad05.svg": "https://upload.wikimedia.org/wikipedia/commons/4/49/Emoji_u1f930_1f3ff.svg",
   /* :expressionless:                                                      */ "/assets/07ede26f668b74a5fbeefff6eb35e15e.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5d/Emoji_u1f611.svg",
   /* :eye:                                                                 */ "/assets/14a28558668a65318bd7812da7d443bf.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b8/Emoji_u1f441.svg",
   /* :eyeglasses:                                                          */ "/assets/34e88504674828ff4c88b5e5279a794c.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6d/Emoji_u1f453.svg",
