--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -112,7 +112,11 @@ $emoji-people: (
   /* :eyeglasses:                                                          */ "/assets/34e88504674828ff4c88b5e5279a794c.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6d/Emoji_u1f453.svg",
   /* :eyes:                                                                */ "/assets/ccf4c733929efd9762ab02cd65175377.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ee/Emoji_u1f440.svg",
   /* :face_palm:                                                           */ "/assets/a2d0c0f7e2a7219cb5f9b951bba19437.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f926.svg",
-  /* :face_palm::skin-tone-1:                                              */ "/assets/128100fb0b658d993dffffca20273ed6.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a8/Emoji_u1f926_1f3fb.svg",
+  /* :facepalm::skin-tone-1:                                               */ "/assets/128100fb0b658d993dffffca20273ed6.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a8/Emoji_u1f926_1f3fb.svg",
+  /* :facepalm::skin-tone-2:                                               */ "/assets/ddff5f327acde90153c092a2ec160d63.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bc/Emoji_u1f926_1f3fc.svg",
+  /* :facepalm::skin-tone-3:                                               */ "/assets/b67d63a69fe0637f075e483186c228df.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a0/Emoji_u1f926_1f3fd.svg",
+  /* :facepalm::skin-tone-4:                                               */ "/assets/bc7e3f27acd3fcb786f8100e2442807b.svg": "https://upload.wikimedia.org/wikipedia/commons/2/27/Emoji_u1f926_1f3fe.svg",
+  /* :facepalm::skin-tone-5:                                               */ "/assets/a1df8411399f691e18e9cc0549f9b357.svg": "https://upload.wikimedia.org/wikipedia/commons/1/16/Emoji_u1f926_1f3ff.svg",
   /* :family_mmb:                                                          */ "/assets/d31f3237d6f64283c2fe3f90305bfd16.svg": "https://upload.wikimedia.org/wikipedia/commons/9/93/Emoji_u1f468_200d_1f468_200d_1f466.svg",
   /* :family_mmbb:                                                         */ "/assets/1a55a94b439c00190aa3b353e4c455e1.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a5/Emoji_u1f468_200d_1f468_200d_1f466_200d_1f466.svg",
   /* :family_mmg:                                                          */ "/assets/1b75264578bd214440789e652a2f877e.svg": "https://upload.wikimedia.org/wikipedia/commons/1/18/Emoji_u1f468_200d_1f468_200d_1f467.svg",
