--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -136,6 +136,10 @@ $emoji-people: (
   /* :fingers_crossed:                                                     */ "/assets/5a73c395732e49ad5768a857ab749677.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5c/Emoji_u1f91e.svg",
   /* :fist:                                                                */ "/assets/af184eec103ade6eab147ebab9ad651e.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e5/Emoji_u270a.svg",
   /* :fist::skin-tone-1:                                                   */ "/assets/d3382d1f7c8c5259dc61ec998e29776c.svg": "https://upload.wikimedia.org/wikipedia/commons/3/33/Emoji_u270a_1f3fb.svg",
+  /* :fist::skin-tone-2:                                                   */ "/assets/95476895edfec975949fbdbfd980fdd6.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cd/Emoji_u270a_1f3fc.svg",
+  /* :fist::skin-tone-3:                                                   */ "/assets/a30ed137d31101221800193c9f0711a6.svg": "https://upload.wikimedia.org/wikipedia/commons/3/37/Emoji_u270a_1f3fd.svg",
+  /* :fist::skin-tone-4:                                                   */ "/assets/18114bd5cd6f0d457a01855044401fa8.svg": "https://upload.wikimedia.org/wikipedia/commons/3/39/Emoji_u270a_1f3fe.svg",
+  /* :fist::skin-tone-5:                                                   */ "/assets/e4409d5b59c277efe49aeaa6a6842fa4.svg": "https://upload.wikimedia.org/wikipedia/commons/8/82/Emoji_u270a_1f3ff.svg",
   /* :flushed:                                                             */ "/assets/737302f9d68a5a14f95ea1beb1b198d6.svg": "https://upload.wikimedia.org/wikipedia/commons/2/28/Emoji_u1f633.svg",
   /* :footprints:                                                          */ "/assets/56950b28b0de71b80cdb2fdb74affb03.svg": "https://upload.wikimedia.org/wikipedia/commons/6/65/Emoji_u1f463.svg",
   /* :frowning:                                                            */ "/assets/f71a48ebe4ebb6c0fb771721248d7523.svg": "https://upload.wikimedia.org/wikipedia/commons/2/23/Emoji_u1f626.svg",
