--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -147,6 +147,10 @@ $emoji-people: (
   /* :ghost:                                                               */ "/assets/52a1855c6542b674e2f145306c76bebe.svg": "https://upload.wikimedia.org/wikipedia/commons/c/ce/Emoji_u1f47b.svg",
   /* :girl:                                                                */ "/assets/60c15854817364e8cc890c854b597dbc.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f9/Emoji_u1f467.svg",
   /* :girl::skin-tone-1:                                                   */ "/assets/8344ccdecbea75a8fa576abd992ba9ef.svg": "https://upload.wikimedia.org/wikipedia/commons/3/39/Emoji_u1f467_1f3fb.svg",
+  /* :girl::skin-tone-2:                                                   */ "/assets/de17fa915aa42b815af40be4a23021be.svg": "https://upload.wikimedia.org/wikipedia/commons/1/18/Emoji_u1f467_1f3fc.svg",
+  /* :girl::skin-tone-3:                                                   */ "/assets/6bc389e19ace588f464dfb12b5db29ed.svg": "https://upload.wikimedia.org/wikipedia/commons/8/88/Emoji_u1f467_1f3fd.svg",
+  /* :girl::skin-tone-4:                                                   */ "/assets/91a5a8d03ea23395625a599d2bf31551.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fe/Emoji_u1f467_1f3fe.svg",
+  /* :girl::skin-tone-5:                                                   */ "/assets/deec9e3217df2e54929fc60e7c1c51f9.svg": "https://upload.wikimedia.org/wikipedia/commons/8/83/Emoji_u1f467_1f3ff.svg",
   /* :grandma::skin-tone-1:                                                */ "/assets/e49a7999dc6921fa3efebf97ec57d05f.svg": "https://upload.wikimedia.org/wikipedia/commons/8/83/Emoji_u1f475_1f3fb.svg",
   /* :grimacing:                                                           */ "/assets/be0923fd964bff1a6ea77c14fe227a63.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2e/Emoji_u1f62c.svg",
   /* :grin:                                                                */ "/assets/b51b374967740c81d8681d7a6cb4218d.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cb/Emoji_u1f601.svg",
