--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -152,6 +152,10 @@ $emoji-people: (
   /* :girl::skin-tone-4:                                                   */ "/assets/91a5a8d03ea23395625a599d2bf31551.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fe/Emoji_u1f467_1f3fe.svg",
   /* :girl::skin-tone-5:                                                   */ "/assets/deec9e3217df2e54929fc60e7c1c51f9.svg": "https://upload.wikimedia.org/wikipedia/commons/8/83/Emoji_u1f467_1f3ff.svg",
   /* :grandma::skin-tone-1:                                                */ "/assets/e49a7999dc6921fa3efebf97ec57d05f.svg": "https://upload.wikimedia.org/wikipedia/commons/8/83/Emoji_u1f475_1f3fb.svg",
+  /* :grandma::skin-tone-2:                                                */ "/assets/03b9ffb75a1ca9631401f79b480d3b5d.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d7/Emoji_u1f475_1f3fc.svg",
+  /* :grandma::skin-tone-3:                                                */ "/assets/a2a08068626af0af29b34d551373f0a7.svg": "https://upload.wikimedia.org/wikipedia/commons/6/65/Emoji_u1f475_1f3fd.svg",
+  /* :grandma::skin-tone-4:                                                */ "/assets/76abf8347657dae994ba85495e22d127.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3e/Emoji_u1f475_1f3fe.svg",
+  /* :grandma::skin-tone-5:                                                */ "/assets/ddc2d235e1a89704dd2888136ce02438.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c5/Emoji_u1f475_1f3ff.svg",
   /* :grimacing:                                                           */ "/assets/be0923fd964bff1a6ea77c14fe227a63.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2e/Emoji_u1f62c.svg",
   /* :grin:                                                                */ "/assets/b51b374967740c81d8681d7a6cb4218d.svg": "https://upload.wikimedia.org/wikipedia/commons/c/cb/Emoji_u1f601.svg",
   /* :grinning:                                                            */ "/assets/5c04ac2b97de83c767c22cb0028544ee.svg": "https://upload.wikimedia.org/wikipedia/commons/3/31/Emoji_u1f600.svg",
