emojiNotoBlobs - :cyclone: temp fix

--- a/emojiNotoBlobs/src/_emoji-symbols.scss
+++ b/emojiNotoBlobs/src/_emoji-symbols.scss
@@ -91,7 +91,7 @@ $emoji-symbols: (
   /* :curly_loop:                         */ "/assets/be73eca7ff2e6dd30b69a43974a19164.svg": "https://upload.wikimedia.org/wikipedia/commons/7/74/Emoji_u27b0.svg",
   /* :currency_exchange:                  */ "/assets/a65d35e1714c54139d79c90a2126acdd.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a6/Emoji_u1f4b1.svg",
   /* :customs:                            */ "/assets/3e50c9d0300203598831bd391ab66af3.svg": "https://upload.wikimedia.org/wikipedia/commons/3/39/Emoji_u1f6c3.svg",
-  /* :cyclone:                            */ "/assets/09e6dcd34b6d48e8e85ecdc2f471df52.svg": "https://upload.wikimedia.org/wikipedia/commons/2/20/Emoji_u1f300.svg",
+  /* :cyclone:                            */ "/assets/09e6dcd34b6d48e8e85ecdc2f471df52.svg": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Emoji_u1f300.svg/512px-Emoji_u1f300.svg.png", // SVG file doesn't seem to exist in Wikimedia
   /* :diamond_shape_with_a_dot_inside:    */ "/assets/4d2c2f2f933329e7409236aaeeaa7c57.svg": "https://upload.wikimedia.org/wikipedia/commons/5/58/Emoji_u1f4a0.svg",
   /* :diamonds:                           */ "/assets/a36fbb4c7ce0e0f2d1b9e036c4ddfa2b.svg": "https://upload.wikimedia.org/wikipedia/commons/3/3d/Emoji_u2666.svg",
   /* :do_not_litter:                      */ "/assets/3d984f2cbd6e6bc528d183afe0ddebe3.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ee/Emoji_u1f6af.svg",
