--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -161,6 +161,10 @@ $emoji-people: (
   /* :grinning:                                                            */ "/assets/5c04ac2b97de83c767c22cb0028544ee.svg": "https://upload.wikimedia.org/wikipedia/commons/3/31/Emoji_u1f600.svg",
   /* :guardsman:                                                           */ "/assets/a3fdff4442a1292282f41fbfefab4c45.svg": "https://upload.wikimedia.org/wikipedia/commons/0/02/Emoji_u1f482.svg",
   /* :guardsman::skin-tone-1:                                              */ "/assets/22e1d19751a8ee5161436a8a7482ed8e.svg": "https://upload.wikimedia.org/wikipedia/commons/4/48/Emoji_u1f482_1f3fb.svg",
+  /* :guardsman::skin-tone-2:                                              */ "/assets/dbf20ca2eddd152e1cac3057c58ced4a.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f482_1f3fc.svg",
+  /* :guardsman::skin-tone-3:                                              */ "/assets/8540c0466819ae210a389f4ebf8d6464.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f482_1f3fd.svg",
+  /* :guardsman::skin-tone-4:                                              */ "/assets/48a52baf2af410802e5bbfb734d69a33.svg": "https://upload.wikimedia.org/wikipedia/commons/6/68/Emoji_u1f482_1f3fe.svg",
+  /* :guardsman::skin-tone-5:                                              */ "/assets/63bee505d5752d31091343e1ab18185e.svg": "https://upload.wikimedia.org/wikipedia/commons/6/64/Emoji_u1f482_1f3ff.svg",
   /* :haircut:                                                             */ "/assets/a1e516be5d5bfc7f5a5e303942d608d7.svg": "https://upload.wikimedia.org/wikipedia/commons/9/97/Emoji_u1f487.svg",
   /* :haircut::skin-tone-1:                                                */ "/assets/22e9697cc48924a630acea37d7885b13.svg": "https://upload.wikimedia.org/wikipedia/commons/7/74/Emoji_u1f487_1f3fb.svg",
   /* :hand_splayed:                                                        */ "/assets/a7ca6d4faf1d497b4d75b44a6bb58f91.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f590.svg",
