--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -167,6 +167,10 @@ $emoji-people: (
   /* :guardsman::skin-tone-5:                                              */ "/assets/63bee505d5752d31091343e1ab18185e.svg": "https://upload.wikimedia.org/wikipedia/commons/6/64/Emoji_u1f482_1f3ff.svg",
   /* :haircut:                                                             */ "/assets/a1e516be5d5bfc7f5a5e303942d608d7.svg": "https://upload.wikimedia.org/wikipedia/commons/9/97/Emoji_u1f487.svg",
   /* :haircut::skin-tone-1:                                                */ "/assets/22e9697cc48924a630acea37d7885b13.svg": "https://upload.wikimedia.org/wikipedia/commons/7/74/Emoji_u1f487_1f3fb.svg",
+  /* :haircut::skin-tone-2:                                                */ "/assets/ed7d3d24e0ae80b6d9c28c61ebe62d78.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a3/Emoji_u1f487_1f3fc.svg",
+  /* :haircut::skin-tone-3:                                                */ "/assets/d1f6f7afff338ac40d6a613a1e80cb5f.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f6/Emoji_u1f487_1f3fd_200d_2640.svg",
+  /* :haircut::skin-tone-4:                                                */ "/assets/56748ef2a922ef41060acd32bf1afcf6.svg": "https://upload.wikimedia.org/wikipedia/commons/6/62/Emoji_u1f487_1f3fe.svg",
+  /* :haircut::skin-tone-5:                                                */ "/assets/1fa0c76eccca5667970e36e6eed275f3.svg": "https://upload.wikimedia.org/wikipedia/commons/7/73/Emoji_u1f487_1f3ff.svg",
   /* :hand_splayed:                                                        */ "/assets/a7ca6d4faf1d497b4d75b44a6bb58f91.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f590.svg",
   /* :hand_with_index_and_middle_finger_crossed::skin-tone-1:              */ "/assets/1582c88dc78aef3504ae1a4d4838f5da.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c1/Emoji_u1f91e_1f3fb.svg",
   /* :handbag:                                                             */ "/assets/cf609ce2c1dd8d2ac6ec799d6bcc19ab.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d5/Emoji_u1f45c.svg",
