emojiNotoBlobs - :hand_with_index_and_middle_finger_crossed:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -173,6 +173,10 @@ $emoji-people: (
   /* :haircut::skin-tone-5:                                                */ "/assets/1fa0c76eccca5667970e36e6eed275f3.svg": "https://upload.wikimedia.org/wikipedia/commons/7/73/Emoji_u1f487_1f3ff.svg",
   /* :hand_splayed:                                                        */ "/assets/a7ca6d4faf1d497b4d75b44a6bb58f91.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1d/Emoji_u1f590.svg",
   /* :hand_with_index_and_middle_finger_crossed::skin-tone-1:              */ "/assets/1582c88dc78aef3504ae1a4d4838f5da.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c1/Emoji_u1f91e_1f3fb.svg",
+  /* :hand_with_index_and_middle_finger_crossed::skin-tone-2:              */ "/assets/b13fc5541affd359d9f0ecc3e468a1f8.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d9/Emoji_u1f91e_1f3fc.svg",
+  /* :hand_with_index_and_middle_finger_crossed::skin-tone-3:              */ "/assets/cd4f00e09dbb4f91dca4f8c1de0fa6da.svg": "https://upload.wikimedia.org/wikipedia/commons/5/51/Emoji_u1f91e_1f3fd.svg",
+  /* :hand_with_index_and_middle_finger_crossed::skin-tone-4:              */ "/assets/4e5c4ea8c9c17be04aba202f65d1ce6c.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d7/Emoji_u1f91e_1f3fe.svg",
+  /* :hand_with_index_and_middle_finger_crossed::skin-tone-5:              */ "/assets/c0752f6cfeb0a0b7cf2d0d85e54e930e.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1f/Emoji_u1f91e_1f3ff.svg",
   /* :handbag:                                                             */ "/assets/cf609ce2c1dd8d2ac6ec799d6bcc19ab.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d5/Emoji_u1f45c.svg",
   /* :handshake:                                                           */ "/assets/1c9af0d25ff26e228bf3d4828b6e10d1.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6e/Emoji_u1f91d.svg",
   /* :head_bandage:                                                        */ "/assets/720a392d0bcd8e644b0d3f8698889238.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4d/Emoji_u1f915.svg",
