emojiNotoBlobs - :information_desk_person:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -189,6 +189,10 @@ $emoji-people: (
   /* :imp:                                                                 */ "/assets/09cf1b8ac070f68b451de754e56f464a.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4d/Emoji_u1f47f.svg",
   /* :information_desk_person:                                             */ "/assets/ba00bf0e3b2d93d7be86cc5b1b580442.svg": "https://upload.wikimedia.org/wikipedia/commons/5/55/Emoji_u1f481.svg",
   /* :information_desk_person::skin-tone-1:                                */ "/assets/e490adbdbb5b9df8469ac6e6ce8aab1f.svg": "https://upload.wikimedia.org/wikipedia/commons/2/23/Emoji_u1f481_1f3fb.svg",
+  /* :information_desk_person::skin-tone-2:                                */ "/assets/6ac04613aa47469ff95623e73c0abdec.svg": "https://upload.wikimedia.org/wikipedia/commons/1/13/Emoji_u1f481_1f3fc.svg",
+  /* :information_desk_person::skin-tone-3:                                */ "/assets/7586b05f88544bc05c93ea3b74d11b46.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6a/Emoji_u1f481_1f3fd.svg",
+  /* :information_desk_person::skin-tone-4:                                */ "/assets/82a9f07f106e5d379e8141f298be49cd.svg": "https://upload.wikimedia.org/wikipedia/commons/a/af/Emoji_u1f481_1f3fe.svg",
+  /* :information_desk_person::skin-tone-5:                                */ "/assets/ac8e55f852535d2e4392e831108eac71.svg": "https://upload.wikimedia.org/wikipedia/commons/8/84/Emoji_u1f481_1f3ff.svg",
   /* :innocent:                                                            */ "/assets/4a2841a4746acdf4d391b4fd497e540b.svg": "https://upload.wikimedia.org/wikipedia/commons/c/ca/Emoji_u1f607.svg",
   /* :japanese_goblin:                                                     */ "/assets/02b72abda0d394b1b194b9d788cbe070.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c7/Emoji_u1f47a.svg",
   /* :japanese_ogre:                                                       */ "/assets/1a97e9e64e832ccb6eab7ec1661dd09f.svg": "https://upload.wikimedia.org/wikipedia/commons/4/42/Emoji_u1f479.svg",
