--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -211,6 +211,10 @@ $emoji-people: (
   /* :laughing:                                                            */ "/assets/add1f87676ce1d709db3efd005873142.svg": "https://upload.wikimedia.org/wikipedia/commons/2/24/Emoji_u1f606.svg",
   /* :left_facing_fist:                                                    */ "/assets/86e370b15b66e9e93eddee319c654a43.svg": "https://upload.wikimedia.org/wikipedia/commons/9/90/Emoji_u1f91b.svg",
   /* :left_fist::skin-tone-1:                                              */ "/assets/1cddbada78c69bf77f9012418c56fe56.svg": "https://upload.wikimedia.org/wikipedia/commons/7/73/Emoji_u1f91b_1f3fb.svg",
+  /* :left_fist::skin-tone-2:                                              */ "/assets/a6126458bbab741268586171361d0e8e.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d4/Emoji_u1f91b_1f3fc.svg",
+  /* :left_fist::skin-tone-3:                                              */ "/assets/357b9d9cae813706cc0cf91f0edc4fb2.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ae/Emoji_u1f91b_1f3fd.svg",
+  /* :left_fist::skin-tone-4:                                              */ "/assets/0640495a5e66d9be6fec1298e82f9ccc.svg": "https://upload.wikimedia.org/wikipedia/commons/8/87/Emoji_u1f91b_1f3fe.svg",
+  /* :left_fist::skin-tone-5:                                              */ "/assets/4b4081752b59f2bd2e4949a996fcf591.svg": "https://upload.wikimedia.org/wikipedia/commons/1/14/Emoji_u1f91b_1f3ff.svg",
   /* :lips:                                                                */ "/assets/1dc2d1d261117e88346765640e38eb47.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b9/Emoji_u1f444.svg",
   /* :lipstick:                                                            */ "/assets/8f05049e215401ab36b109f7540164be.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f484.svg",
   /* :lying_face:                                                          */ "/assets/724802e432ab8683ca07516667271177.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2a/Emoji_u1f925.svg",
