emojiNotoBlobs - :male_dancer:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -219,6 +219,10 @@ $emoji-people: (
   /* :lipstick:                                                            */ "/assets/8f05049e215401ab36b109f7540164be.svg": "https://upload.wikimedia.org/wikipedia/commons/0/05/Emoji_u1f484.svg",
   /* :lying_face:                                                          */ "/assets/724802e432ab8683ca07516667271177.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2a/Emoji_u1f925.svg",
   /* :male_dancer::skin-tone-1:                                            */ "/assets/d975a1ee2bbfb828074c0dd310072899.svg": "https://upload.wikimedia.org/wikipedia/commons/8/87/Emoji_u1f57a_1f3fb.svg",
+  /* :male_dancer::skin-tone-2:                                            */ "/assets/324244f2ad6052bbbd2f611e111f9a8a.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9d/Emoji_u1f57a_1f3fc.svg",
+  /* :male_dancer::skin-tone-3:                                            */ "/assets/c778a8ddb74c0b01a20159d18efeaf30.svg": "https://upload.wikimedia.org/wikipedia/commons/4/46/Emoji_u1f57a_1f3fd.svg",
+  /* :male_dancer::skin-tone-4:                                            */ "/assets/4a45da6a753f236773e80a3632ca0b92.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e8/Emoji_u1f57a_1f3fe.svg",
+  /* :male_dancer::skin-tone-5:                                            */ "/assets/99e0666a6aaaf3eb5279a9d702acc412.svg": "https://upload.wikimedia.org/wikipedia/commons/7/7a/Emoji_u1f57a_1f3ff.svg",
   /* :man_dancing:                                                         */ "/assets/6d5a34e74d7df5e18489d1ddc37da321.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6e/Emoji_u1f57a.svg",
   /* :man_in_tuxedo:                                                       */ "/assets/7952d980903dc48db721d3d63a00769d.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5c/Emoji_u1f935.svg",
   /* :man_in_tuxedo::skin-tone-1:                                          */ "/assets/ce0b16a38ed6922df90755bea711986f.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b6/Emoji_u1f935_1f3fb.svg",
