emojiNotoBlobs - :man_in_tuxedo:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -226,6 +226,10 @@ $emoji-people: (
   /* :man_dancing:                                                         */ "/assets/6d5a34e74d7df5e18489d1ddc37da321.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6e/Emoji_u1f57a.svg",
   /* :man_in_tuxedo:                                                       */ "/assets/7952d980903dc48db721d3d63a00769d.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5c/Emoji_u1f935.svg",
   /* :man_in_tuxedo::skin-tone-1:                                          */ "/assets/ce0b16a38ed6922df90755bea711986f.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b6/Emoji_u1f935_1f3fb.svg",
+  /* :man_in_tuxedo::skin-tone-2:                                          */ "/assets/a2cc373145610818cdd354df40204dd1.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9d/Emoji_u1f935_1f3fc.svg",
+  /* :man_in_tuxedo::skin-tone-3:                                          */ "/assets/256a199702d811fa2187e5074117d290.svg": "https://upload.wikimedia.org/wikipedia/commons/8/83/Emoji_u1f935_1f3fd.svg",
+  /* :man_in_tuxedo::skin-tone-4:                                          */ "/assets/939dbe2849387b23913cd742db341bf1.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d9/Emoji_u1f935_1f3fe.svg",
+  /* :man_in_tuxedo::skin-tone-5:                                          */ "/assets/42fe92d3fd2468e96f9a91dcac9e0554.svg": "https://upload.wikimedia.org/wikipedia/commons/4/49/Emoji_u1f935_1f3ff.svg",
   /* :man_with_gua_pi_mao:                                                 */ "/assets/1684885d6fcc9004c4a2af3a84678e88.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b4/Emoji_u1f472.svg",
   /* :man_with_gua_pi_mao::skin-tone-1:                                    */ "/assets/5c06a1979530292af5f208e1f277b1b1.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ad/Emoji_u1f472_1f3fb.svg",
   /* :man_with_turban:                                                     */ "/assets/5f296f11809f5d2f79be9304f634ae30.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b5/Emoji_u1f473.svg",
