emojiNotoBlobs - :man_with_gua_pi_mao:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -232,6 +232,10 @@ $emoji-people: (
   /* :man_in_tuxedo::skin-tone-5:                                          */ "/assets/42fe92d3fd2468e96f9a91dcac9e0554.svg": "https://upload.wikimedia.org/wikipedia/commons/4/49/Emoji_u1f935_1f3ff.svg",
   /* :man_with_gua_pi_mao:                                                 */ "/assets/1684885d6fcc9004c4a2af3a84678e88.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b4/Emoji_u1f472.svg",
   /* :man_with_gua_pi_mao::skin-tone-1:                                    */ "/assets/5c06a1979530292af5f208e1f277b1b1.svg": "https://upload.wikimedia.org/wikipedia/commons/a/ad/Emoji_u1f472_1f3fb.svg",
+  /* :man_with_gua_pi_mao::skin-tone-2:                                    */ "/assets/0751da77ee1c3fa0a55f195455898d14.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e2/Emoji_u1f472_1f3fc.svg",
+  /* :man_with_gua_pi_mao::skin-tone-3:                                    */ "/assets/0a8439f09398c37f41552a6db5c0106e.svg": "https://upload.wikimedia.org/wikipedia/commons/f/fc/Emoji_u1f472_1f3fd.svg",
+  /* :man_with_gua_pi_mao::skin-tone-4:                                    */ "/assets/ea75a0a6c60312dff88bcb118adfceda.svg": "https://upload.wikimedia.org/wikipedia/commons/2/2a/Emoji_u1f472_1f3fe.svg",
+  /* :man_with_gua_pi_mao::skin-tone-5:                                    */ "/assets/01fb51adc7e7e6609cbb74de1fc423e8.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u1f472_1f3ff.svg",
   /* :man_with_turban:                                                     */ "/assets/5f296f11809f5d2f79be9304f634ae30.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b5/Emoji_u1f473.svg",
   /* :man_with_turban::skin-tone-1:                                        */ "/assets/9322622fa8fb2f18043d628b51ba41b7.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d6/Emoji_u1f473_1f3fb.svg",
   /* :man:                                                                 */ "/assets/6fcc9018fde2319ef05e73926213cb22.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0e/Emoji_u1f468.svg",
