--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -238,6 +238,10 @@ $emoji-people: (
   /* :man_with_gua_pi_mao::skin-tone-5:                                    */ "/assets/01fb51adc7e7e6609cbb74de1fc423e8.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f4/Emoji_u1f472_1f3ff.svg",
   /* :man_with_turban:                                                     */ "/assets/5f296f11809f5d2f79be9304f634ae30.svg": "https://upload.wikimedia.org/wikipedia/commons/b/b5/Emoji_u1f473.svg",
   /* :man_with_turban::skin-tone-1:                                        */ "/assets/9322622fa8fb2f18043d628b51ba41b7.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d6/Emoji_u1f473_1f3fb.svg",
+  /* :man_with_turban::skin-tone-2:                                        */ "/assets/3a65bcf3a0df3285f8ed539764987a2c.svg": "https://upload.wikimedia.org/wikipedia/commons/2/21/Emoji_u1f473_1f3fc.svg",
+  /* :man_with_turban::skin-tone-3:                                        */ "/assets/802d0db1a3787b75db2bcc540f0205c3.svg": "https://upload.wikimedia.org/wikipedia/commons/9/95/Emoji_u1f473_1f3fd.svg",
+  /* :man_with_turban::skin-tone-4:                                        */ "/assets/b87bfee085c04983d00a9e83b6d26248.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bf/Emoji_u1f473_1f3fe.svg",
+  /* :man_with_turban::skin-tone-5:                                        */ "/assets/804c7d0ad0bd10c5edccb5fe2ec98680.svg": "https://upload.wikimedia.org/wikipedia/commons/2/26/Emoji_u1f473_1f3ff.svg",
   /* :man:                                                                 */ "/assets/6fcc9018fde2319ef05e73926213cb22.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0e/Emoji_u1f468.svg",
   /* :man::skin-tone-1:                                                    */ "/assets/115b933b37ff9d96c03b108c71a42b58.svg": "https://upload.wikimedia.org/wikipedia/commons/8/87/Emoji_u1f468_1f3fb.svg",
   /* :mans_shoe:                                                           */ "/assets/fa53f108d432bc4086b5849c99a1cee0.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f3/Emoji_u1f45e.svg",
