--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -244,6 +244,10 @@ $emoji-people: (
   /* :man_with_turban::skin-tone-5:                                        */ "/assets/804c7d0ad0bd10c5edccb5fe2ec98680.svg": "https://upload.wikimedia.org/wikipedia/commons/2/26/Emoji_u1f473_1f3ff.svg",
   /* :man:                                                                 */ "/assets/6fcc9018fde2319ef05e73926213cb22.svg": "https://upload.wikimedia.org/wikipedia/commons/0/0e/Emoji_u1f468.svg",
   /* :man::skin-tone-1:                                                    */ "/assets/115b933b37ff9d96c03b108c71a42b58.svg": "https://upload.wikimedia.org/wikipedia/commons/8/87/Emoji_u1f468_1f3fb.svg",
+  /* :man::skin-tone-2:                                                    */ "/assets/074a4d75322bb57b952a2860c4adc736.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a2/Emoji_u1f468_1f3fc.svg",
+  /* :man::skin-tone-3:                                                    */ "/assets/a88fb71b14bafb6d1d66329ea0bb0088.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9b/Emoji_u1f468_1f3fd.svg",
+  /* :man::skin-tone-4:                                                    */ "/assets/b77f03b86b600f905cb12fca49cecf28.svg": "https://upload.wikimedia.org/wikipedia/commons/1/1c/Emoji_u1f468_1f3fe.svg",
+  /* :man::skin-tone-5:                                                    */ "/assets/7b4c21d6b2137f572ccf1fc80af35e57.svg": "https://upload.wikimedia.org/wikipedia/commons/8/8e/Emoji_u1f468_1f3ff.svg",
   /* :mans_shoe:                                                           */ "/assets/fa53f108d432bc4086b5849c99a1cee0.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f3/Emoji_u1f45e.svg",
   /* :mask:                                                                */ "/assets/e4f2f57f08a4e4a48546f5c4e21c9a77.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5e/Emoji_u1f637.svg",
   /* :massage:                                                             */ "/assets/192e9e7cfbd38fe1cd24f12c4475d1c6.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9d/Emoji_u1f486.svg",
