--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -252,6 +252,10 @@ $emoji-people: (
   /* :mask:                                                                */ "/assets/e4f2f57f08a4e4a48546f5c4e21c9a77.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5e/Emoji_u1f637.svg",
   /* :massage:                                                             */ "/assets/192e9e7cfbd38fe1cd24f12c4475d1c6.svg": "https://upload.wikimedia.org/wikipedia/commons/9/9d/Emoji_u1f486.svg",
   /* :massage::skin-tone-1:                                                */ "/assets/3333892e8f468edbd97ea7ae2e668839.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dc/Emoji_u1f486_1f3fb.svg",
+  /* :massage::skin-tone-2:                                                */ "/assets/e968d4f0837d50d650918cdb7ce6fd2f.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bd/Emoji_u1f486_1f3fc.svg",
+  /* :massage::skin-tone-3:                                                */ "/assets/834ebe0b29750157871c2a8e01dfe26f.svg": "https://upload.wikimedia.org/wikipedia/commons/6/6a/Emoji_u1f486_1f3fd.svg",
+  /* :massage::skin-tone-4:                                                */ "/assets/f05354475c7e471169ad4b5267910aa5.svg": "https://upload.wikimedia.org/wikipedia/commons/e/ea/Emoji_u1f486_1f3fe.svg",
+  /* :massage::skin-tone-5:                                                */ "/assets/44a6bdb90b0f2534734b12e6e153fed9.svg": "https://upload.wikimedia.org/wikipedia/commons/2/25/Emoji_u1f486_1f3ff.svg",
   /* :metal:                                                               */ "/assets/26363123de60a4946bf4e8987523dcb2.svg": "https://upload.wikimedia.org/wikipedia/commons/d/db/Emoji_u1f918.svg",
   /* :middle_finger:                                                       */ "/assets/209381ec0f39a61c1904269ed41c62eb.svg": "https://upload.wikimedia.org/wikipedia/commons/4/4f/Emoji_u1f595.svg",
   /* :money_mouth:                                                         */ "/assets/5cdb67d23b259628f475e663ef9907e7.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c2/Emoji_u1f911.svg",
