emojiNotoBlobs - :mother_christmas:

--- a/emojiNotoBlobs/src/_emoji-people.scss
+++ b/emojiNotoBlobs/src/_emoji-people.scss
@@ -261,6 +261,10 @@ $emoji-people: (
   /* :money_mouth:                                                         */ "/assets/5cdb67d23b259628f475e663ef9907e7.svg": "https://upload.wikimedia.org/wikipedia/commons/c/c2/Emoji_u1f911.svg",
   /* :mortar_board:                                                        */ "/assets/30031f3c30951eed996e7bacdbbfb61f.svg": "https://upload.wikimedia.org/wikipedia/commons/8/81/Emoji_u1f393.svg",
   /* :mother_christmas::skin-tone-1:                                       */ "/assets/534fc6fd131ba6ed1c446307f960ebf9.svg": "https://upload.wikimedia.org/wikipedia/commons/a/a2/Emoji_u1f936_1f3fb.svg",
+  /* :mother_christmas::skin-tone-2:                                       */ "/assets/07bf285793f70908782f633e674fb532.svg": "https://upload.wikimedia.org/wikipedia/commons/f/f6/Emoji_u1f936_1f3fc.svg",
+  /* :mother_christmas::skin-tone-3:                                       */ "/assets/a38a6f1c42f9d623a2bb077846f9b223.svg": "https://upload.wikimedia.org/wikipedia/commons/5/5d/Emoji_u1f936_1f3fd.svg",
+  /* :mother_christmas::skin-tone-4:                                       */ "/assets/26e9ce35d631f3a608e84470b5f437fc.svg": "https://upload.wikimedia.org/wikipedia/commons/d/dc/Emoji_u1f936_1f3fe.svg",
+  /* :mother_christmas::skin-tone-5:                                       */ "/assets/6cfe207d02c461c76499e5d885588009.svg": "https://upload.wikimedia.org/wikipedia/commons/b/be/Emoji_u1f936_1f3ff.svg",
   /* :mrs_claus:                                                           */ "/assets/91f43b7b78d9077aca6fec698800d3bd.svg": "https://upload.wikimedia.org/wikipedia/commons/b/bf/Emoji_u1f936.svg",
   /* :muscle:                                                              */ "/assets/0e2bb36113661c72bb9b3b4e5c834f97.svg": "https://upload.wikimedia.org/wikipedia/commons/e/e4/Emoji_u1f4aa.svg",
   /* :muscle::skin-tone-1:                                                 */ "/assets/b4ae22fc10b358f19971dde7dffbe15f.svg": "https://upload.wikimedia.org/wikipedia/commons/d/d3/Emoji_u1f4aa_1f3fb.svg",
